--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
     "test": "npm-run-all test:*",
     "test:html": "globstar nu-html-checker *.html",
-    "test:js": "eslint js/*.js",
+    "test:js": "eslint js/",
     "test:scss": "stylelint sass/",
     "build": "npm-run-all build:* test",
     "build:sass": "node-sass --output-style compact -o css sass",
@@ -18,7 +18,7 @@
     "build-dev": "npm-run-all build-dev:sass build:autoprefixer",
     "build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
     "watch": "npm-run-all build build-dev -p watch:*",
-    "watch:browsersync": "browser-sync start --server --files \"css/*.css\" \"*.html\" \"js/*.js\"",
+    "watch:browsersync": "browser-sync start --server --files \"css/*.css\" \"*.html\"",
     "watch:sassprefixer": "onchange sass/*.scss -- npm run build-dev"
   },
   "keywords": [],
@@ -29,6 +29,7 @@
     "autoprefixer-cli": "^1.0.0",
     "browser-sync": "^2.26.3",
     "eslint": "^5.15.1",
+    "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-vue": "^5.2.2",
     "globstar": "^1.0.0",
     "mkdirp": "^0.5.1",
